--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@types/lodash": "^4.14.149",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "js-string-escape": "^1.0.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -45,6 +48,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
+    "@types/yup": "^0.26.26",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
