--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.14.149",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "hbs": "^4.0.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
