add timeout to request, split request by 5

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@types/lodash": "^4.14.149",
+    "abort-controller": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "hbs": "^4.0.6",
