add simple session auth

--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@nestjs/platform-express": "^6.7.2",
     "@types/lodash": "^4.14.149",
     "abort-controller": "^3.0.0",
+    "bcrypt": "^3.0.7",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "express-mysql-session": "^2.1.0",
+    "express-session": "^1.17.0",
     "hbs": "^4.0.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
