add DB port, node port to env, add prod env, rename all envs

--- a/env.dev.env
+++ b/env.dev.env
@@ -1,5 +1,7 @@
 DATABASE_HOST = localhost
 DATABASE_USER = root
 DATABASE_PASSWORD = root
-DATABASE = dbname_test
+DATABASE_PORT = 3306
+DATABASE = dbname
 TIMEZONE = +0:00
+PORT = 8000
