--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "build-start": "npm run prebuild && npm run build && npm run start:prod",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=prod node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "NODE_ENV=test jest",
     "migrate:test": "NODE_ENV=test ts-node src/migrations/index",
