--- a/env.test.env
+++ b/env.test.env
@@ -1,5 +1,7 @@
 DATABASE_HOST = localhost
 DATABASE_USER = root
 DATABASE_PASSWORD = root
-DATABASE = dbname
+DATABASE_PORT = 3306
+DATABASE = dbname_test
 TIMEZONE = +0:00
+PORT = 3000
