--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/schedule": "^0.1.1",
+    "@sentry/node": "^5.11.0",
     "@types/lodash": "^4.14.149",
     "abort-controller": "^3.0.0",
     "bcrypt": "^3.0.7",
