--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "NODE_ENV=test jest",
     "migrate:test": "NODE_ENV=test ts-node src/migrations/index",
     "migrate:dev": "NODE_ENV=dev ts-node src/migrations/index",
+    "migrate:dev:last": "NODE_ENV=dev ts-node src/migrations/migrateLast",
     "test:pattern": "npm run migrate:dev && npm run test -- --testNamePattern postDelivery",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
