--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.17.0",
     "hbs": "^4.0.6",
+    "knex": "^0.20.9",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
