add missed types for libs, add crunches for cheerio .toArray method, change database port type

--- a/package.json
+++ b/package.json
@@ -30,7 +30,15 @@
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/schedule": "^0.1.1",
     "@sentry/node": "^5.11.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cheerio": "^0.22.16",
+    "@types/cli-color": "^2.0.0",
+    "@types/hbs": "^4.0.1",
+    "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.149",
+    "@types/moment": "^2.13.0",
+    "@types/mysql": "^2.15.9",
+    "@types/node-fetch": "^2.5.5",
     "abort-controller": "^3.0.0",
     "bcrypt": "^3.0.7",
     "cheerio": "^1.0.0-rc.3",
