--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.1"
 
 services:
   db:
-    image: mysql:latest
+    image: mysql:8.0.20
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
