--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,23 @@ server/.nyc_output
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+client/node_modules
+client/.pnp
+client/.pnp.js
+
+# testing
+client/coverage
+
+# production
+client/build
+
+# misc
+client/.DS_Store
+
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
