--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test:nowatch": "react-scripts test --watchAll=false"
   },
   "husky": {
     "hooks": {
