--- a/client/package.json
+++ b/client/package.json
@@ -41,8 +41,8 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
+    "src/**/*.{js,jsx,ts,tsx,json}": [
+      "npm run lint"
     ]
   },
   "eslintConfig": {
