--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       MYSQL_DATABASE: dbname
     ports:
       - 3306:3306
-  db_test:
-    image: mysql:8.0.20
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: dbname_test
-    ports:
-      - 3307:3306
+  # db_test:
+  #   image: mysql:8.0.20
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   restart: always
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #     MYSQL_DATABASE: dbname_test
+  #   ports:
+  #     - 3307:3306
