--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,8 @@
     "abort-controller": "^3.0.0",
     "bcrypt": "^3.0.7",
     "cheerio": "^1.0.0-rc.3",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.17.0",
